crates/solidity/testing/snapshots/bindings_output/expressions/type_expr_integers/generated/v1/0.5.0-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Parse errors:
Error: Expected AddressKeyword or AssemblyKeyword or BoolKeyword or BreakKeyword or ByteKeyword or BytesKeyword or CloseBrace or ContinueKeyword or DecimalLiteral or DoKeyword or DoubleQuotedHexStringLiteral or DoubleQuotedStringLiteral or EmitKeyword or FalseKeyword or FixedKeyword or ForKeyword or FunctionKeyword or HexLiteral or Identifier or IfKeyword or IntKeyword or MappingKeyword or NewKeyword or OpenBrace or OpenBracket or OpenParen or ReturnKeyword or SingleQuotedHexStringLiteral or SingleQuotedStringLiteral or StringKeyword or SuperKeyword or ThisKeyword or TrueKeyword or UfixedKeyword or UintKeyword or WhileKeyword.
   ╭─[input.sol:5:9]
   │
 5 │ ╭─▶         type(uint).min.nop();
   ┆ ┆   
 7 │ ├─▶     }
   │ │           
   │ ╰─────────── Error occurred here.
───╯
References and definitions: 
    ╭─[input.sol:1:1]
    │
  1 │ contract Test {
    │          ──┬─  
    │            ╰─── name: 1
  2 │     using Utils for uint;
    │           ──┬──  
    │             ╰──── ref: 3
    │ 
  4 │     function test() {
    │              ──┬─  
    │                ╰─── name: 2
    │ 
 10 │ library Utils {
    │         ──┬──  
    │           ╰──── name: 3
 11 │     function nop(uint x) internal {
    │              ─┬─      ┬  
    │               ╰────────── name: 4
    │                       │  
    │                       ╰── name: 5
 12 │         return x;
    │                ┬  
    │                ╰── ref: 5
────╯
Definiens: 
    ╭─[input.sol:1:1]
    │
  1 │ ╭───────▶ contract Test {
    ┆ ┆ ┆       
  3 │ │ ╭─────▶ 
    ┆ ┆ ┆       
  7 │ │ ├─────▶     }
    │ │ │               
    │ │ ╰─────────────── definiens: 2
  8 │ ├───│ ──▶ }
    │ │   │         
    │ ╰───────────── definiens: 1
  9 │     ╭───▶ 
    ┆     ┆ ┆   
 11 │     │ ╭─▶     function nop(uint x) internal {
    │     │ │                    ───┬──  
    │     │ │                       ╰──── definiens: 5
    ┆     ┆ ┆   
 13 │     │ ├─▶     }
    │     │ │           
    │     │ ╰─────────── definiens: 4
 14 │     ├───▶ }
    │     │         
    │     ╰───────── definiens: 3
────╯
